Style About Page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
-<%= link_to "Go back to Home", root_path %>
+<div class="container">
+  <h1>About Me</h1>
+  <p>I am Kyle Isaac A. Mendoza, Born in September 24, 2001. Currently 22 yrs old, and bad at coding</p>
+  <%= link_to "Go back to Home", root_path %>
+</div>
